[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[project]
name = "logistics-risk-prediction"
version = "1.0.0"
description = "End-to-end ML pipeline for predicting late delivery risk in global supply chains"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "pandas>=2.1",
    "numpy>=1.26",
    "scikit-learn>=1.5",
    "xgboost>=2.0",
    "streamlit>=1.37",
    "joblib>=1.3",
    "pyarrow>=17.0",
    "fastapi>=0.109.1",
    "uvicorn>=0.23",
    "pydantic>=2.0",
    "requests>=2.32.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=4.1",
    "httpx>=0.24",
]
test = [
    "pytest>=9.0.3",
    "pytest-cov>=4.1",
    "httpx>=0.24",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = [
    "streamlit: tests requiring streamlit extras",
]
filterwarnings = [
    "ignore::UserWarning",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
